--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ go:
 env:
 - GO111MODULE=on
 
+install:
+- curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $GOPATH/bin v1.12.3
+
 script:
+- golangci-lint run -E megacheck,deadcode,typecheck,govet,misspell,prealloc,gofmt,gocyclo,goconst,dupl,unconvert,interfacer,unparam
 - go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
 after_success:
